name:                reflex-dom-canvas
version:             0.1.0.0
synopsis:            Reflex functions for the HTML5 Canvas (2D & WebGL)
description:
  <<http://i.imgur.com/uZnp9ke.png>>
  .
  Provides Reflex support for interacting with the HTML5 Canvas. Supports "context2d" and "webgl".
license:             BSD3
license-file:        LICENCE
author:              Queensland Functional Programming Lab <oᴉ˙ldɟb@llǝʞsɐɥ>
maintainer:          Queensland Functional Programming Lab <oᴉ˙ldɟb@llǝʞsɐɥ>
copyright:           Copyright (c) 2018, Commonwealth Scientific and Industrial Research Organisation (CSIRO) ABN 41 687 119 230.
category:            FRP,Web,Graphics
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

source-repository   head
  type:             git
  location:         git@github.com/qfpl/reflex-dom-canvas.git

library
  exposed-modules:     Reflex.Dom.CanvasDyn
                     , Reflex.Dom.CanvasBuilder.Types
                     , Reflex.Dom.Canvas.WebGL
                     , Reflex.Dom.Canvas.Context2D

  ghc-options:        -Wall

  build-depends:       base >=4.9 && <4.10
                     , text >= 1.2 && < 1.3
                     , mtl >= 2.2 && < 2.3
                     , reflex >= 0.5 && < 0.6
                     , reflex-dom >= 0.4 && < 0.5
                     , lens
                     , jsaddle
                     , jsaddle-dom == 0.9.*
                     , time
                     , random
                     , containers == 0.5.*
                     , bifunctors == 5.*
                     , free == 4.12.*

  hs-source-dirs:      src
  default-language:    Haskell2010
